[package]
name = "tonic-sdk"
version = "0.1.0"
authors = ["Tonic Foundation <hello@tonic.foundation>"]
edition = "2018"

[dependencies]
tonic-sdk-borsh-size = { path = "./crates/borsh-size" }
tonic-sdk-json = { path = "./crates/json" }
tonic-sdk-macros = { path = "./crates/macros" }

tonic-sdk-dex-errors = { path = "./crates/dex-errors" }
tonic-sdk-dex-events = { path = "./crates/dex-events" }
tonic-sdk-dex-types = { path = "./crates/dex-types" }

[profile.test]
overflow-checks = true

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true
