[package]
name = "tonic-sdk-dex-orderbook"
version = "0.1.0"
authors = ["Tonic Foundation <hello@tonic.foundation>"]
edition = "2018"

[lib]
crate-type = ["rlib"]

[dependencies]
uint = { version = "0.9.0", default-features = false }
near-sdk = "4.0.0-pre.8"
near-contract-standards = "4.0.0-pre.8"
serde_json = "1.0"
num_enum = "0.5.6"
sha3 = "^0.10.0"

tonic-sdk-macros = { path = "../macros" }
tonic-sdk-dex-types = { path = "../dex-types" }
tonic-sdk-dex-errors = { path = "../dex-errors" }

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
anyhow = "1.0"
near-primitives = "0.5.0"
base64 = "0.13.0"

fuzzcheck = "0.12"

[profile.release]
overflow-checks = true